# xteaming_exps

./: CLAUDE.md  demo.ipynb  generate_attack_plans.py  main.py  pyproject.toml
agents/: attacker_agent.py  base_agent.py  gpt_evaluator.py
attacks/2026-02-19_16-16-50/: all_results.json  execution_log.txt
config/: config.yaml
logs/: 2026-02-19_16-16-49.jsonl
strategies/: attack_plans.json
strategies/2026-02-19_16-08-20/: all_messages.json  generation_log.txt
