[project]
name = "x-teaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "aisuite>=0.1.14",
    "black>=26.1.0",
    "colorama>=0.4.6",
    "datasets>=4.5.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "outlines>=1.2.11",
    "pandas>=3.0.1",
    "platformdirs>=4.9.2",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "tenacity>=9.1.4",
    "textgrad>=0.1.8",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
